# XAI_LaBraM

./: .gitignore  LICENSE  README.md  my-dataset-process-error-files.txt  pyproject.toml  tasks.py
notebooks/: tcav_circling_fg_visualfeedback.ipynb  tcav_circling_fg_visualfeedback_l.ipynb  tcav_circling_mg_followership.ipynb  tcav_circling_mg_followership_r.ipynb  tcav_circling_mg_leadership.ipynb  tcav_circling_mg_leadership_l.ipynb  tcav_circling_mg_nosynchrony.ipynb  tcav_circling_mg_open.ipynb  tcav_circling_mg_open_l.ipynb  tcav_circling_mg_solo.ipynb  tcav_circling_mg_synchrony.ipynb  tcav_circling_sanity_test.ipynb  tcav_fg_l.json  tcav_fg_visualfeedback.json  tcav_mg_open_l.json  tcav_nosynchrony.json  tcav_statistics_all_runs.json  tcav_statistics_mg_open.json  tcav_statistics_mg_solo.json  tcav_synchrony.json
src/labram_ft/: engine_for_finetuning.py  evaluate.py  modeling_finetune.py  my-dataset-process-error-files.txt  plot.ipynb  run_class_finetuning.py  tuab-process-error-files.txt  utils.py
src/labram_ft/dataset_maker/: check_circling_data.ipynb  check_fg_data.ipynb  make_Circling.py  make_Circling_overlapping.py  make_FG.py  make_FG_friendship.py  make_FG_group.py  try.py
src/xai_labram/: 01_prepare_tcav_data.py  02_generate_activations.py  03_run_tcav.py  04_analyze_and_plot_results.py  activation_extractor.py  generate_activations.py  prepare_tcav_sanity_check_data.py  prepare_tcav_sanity_check_testing_data.py  run_tcav.py  train.py
src/xai_labram/dataset_maker/: make_MirrorGame_leadfollow.py  make_MirrorGame_synchrony.py
tests/: test_data.py
